# shorelark

./: Cargo.toml  README.md
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  individual.rs  lib.rs  selection.rs  statistics.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  layer_topology.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  eye.rs  food.rs  lib.rs  world.rs
libs/test-lib/: Cargo.toml
libs/test-lib/src/: lib.rs
playground/: Cargo.toml
playground/src/: main.rs
simulation-trunk/: Cargo.toml  index.html  index.scss
simulation-trunk/src/: main.rs
