[package]
name = "simulation-trunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
lib-simulation-wasm = { path = "../libs/simulation-wasm" }
lib-test-lib = { path = "../libs/test-lib" }
log = "0.4"
wasm-logger = "0.2"
web-sys = { version = "*", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
] }
