[package]
name = "lib-simulation-wasm"
version = "0.1.0"
authors = ["Jonas Eichenberger <jo.eichenberger@gmail.com>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
# ------------------------------------- ^----^
# | Enables the `#[derive(Serialize)]` and `#[derive(Deserialize)]`
# | macros.
# |
# | Without this feature-switch, we'd have to write `impl Serialize` by
# | hand, I guess, which ain't no fun.
# ---

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
# -------------------------------------------- ^-------------^
# | Enables `JsValue::from_serde()` that you'll see in a moment.
# ---
lib-simulation = { path = "../simulation" }
